Propertygrid: add hover to dropdown items, fix dropdown height based on # of items

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -804,4 +804,17 @@ cause test to be brighter but more bold looking
 .property-grid-editor-flag-dropdown label {
     width: 100%;
     display: block;
+    padding-left: 2px;
+    padding-right: 2px;
+    margin: 0px;
+}
+
+.property-grid-editor-flag-dropdown label:hover, .property-grid-editor-flag-dropdown div:hover  {
+    background-color: rgba(135, 206, 250, 0.50);
+}
+
+.property-grid-editor-flag-dropdown div {
+    padding-left: 2px;
+    padding-right: 2px;   
+    width: 100%;
 }
