--- a/src/css/datagrid.scss
+++ b/src/css/datagrid.scss
@@ -251,6 +251,7 @@
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     vertical-align: top;
+    position: relative;
 }
 
 .datagrid-cell-sorted {
