Datagrid: fix editor drop down positons when subconainter, make editor dblclick, add selection-changed event

--- a/src/css/datagrid.scss
+++ b/src/css/datagrid.scss
@@ -9,7 +9,7 @@
     border: 0px;
     min-width: 320px;
     min-height: 200px;
-    top: 0;
+    top: 25px;
     bottom: 0;
     left: 0;
     right: 0;
