Datagrid: Change to dbl click for editors to allow selection with single click

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -653,7 +653,7 @@ cause test to be brighter but more bold looking
     cursor: default;
     background-color: white;
     outline: none;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .property-grid-group {
