Code editor: Add tab drag tab reorder

--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -60,6 +60,7 @@ $tabHeight: 26;
     outline: none;
 }
 
+/*
 .cm-tabstrip li:before,
 .cm-tabstrip li:after {
     position: absolute;
@@ -100,6 +101,7 @@ $tabHeight: 26;
 .tabcm-tabstriprow li.active:after {
     box-shadow: -2px 2px 0 window;
 }
+*/
 
 .cm-tabstrip li:last-child {
     padding-right: 0px;
@@ -126,6 +128,19 @@ $tabHeight: 26;
     opacity: 1;
 }
 
+.cm-tabstrip li.drop,
+.cm-tabstrip li.new.drop,
+.cm-tabstrip li.active.drop,
+.cm-tabstrip li.changed.drop,
+.cm-tabstrip li.active.changed.drop,
+.cm-tabstrip li.new.active.drop {
+    background-color: rgba(158, 158, 158, 0.5) !important;
+    color: white !important;
+    border-color: black;
+    box-shadow: initial;
+    text-shadow: 0 1px black;
+}
+
 .cm-tabstrip li .title {
     margin-left: 22px;
     margin-right: 20px;
@@ -134,6 +149,7 @@ $tabHeight: 26;
     font-family: -apple-system,BlinkMacSystemFont,Segoe WPC,Segoe UI,HelveticaNeue-Light,Ubuntu,Droid Sans,sans-serif;
     font-size: 11px;
     margin-top: -2px;
+    pointer-events: none;
 }
 
 .cm-tabstrip li.active .title {
@@ -151,6 +167,7 @@ $tabHeight: 26;
     background-size: 16px 16px;
     background-position: center;
     background-repeat: no-repeat;   
+    pointer-events: none;
 }
 
 #cm-scroll-menu .icon {
@@ -185,6 +202,10 @@ $tabHeight: 26;
 
 .cm-tabstrip li.active .close, .cm-tabstrip li:hover .close {
     display: block;
+}
+
+.cm-tabstrip li.drop .close {
+    pointer-events: none;
 }
 
 .cm-tabpane-container {
@@ -256,6 +277,7 @@ $tabHeight: 26;
 #cm-scroll-left:hover, #cm-scroll-right:hover, #cm-scroll-dropdown:hover, #cm-scroll-dropdown-container.open #cm-scroll-dropdown {
     background-color: $borderColor;
     color: white;
+    text-shadow: 0 1px black;
 }
 
 #cm-scroll-left {
