Code editor: Add drag and drop window splitting with resizing

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -224,7 +224,7 @@ body {
     float: right;
 }
 
-.cm {
+.dock-manager {
     top: 26px !important;
     bottom: 20px;
 }
@@ -257,21 +257,21 @@ body {
     color: black;
 }
 
-.cm-tabstrip li.changed.active {
+.focused .cm-tabstrip li.changed.active {
     background-color: rgb(218, 255, 181) !important;
     border-color: rgb(119, 168, 69) !important;
     opacity: 1;
     color: black;
 }
 
-.cm-tabstrip li.new.active {
+.focused .cm-tabstrip li.new.active {
     background-color: rgb(178, 226, 255) !important;
     border-color: rgb(94, 185, 242) !important;
     opacity: 1;
     color: black;
 }
 
-.cm-tabstrip li.active {
+.focused .cm-tabstrip li.active {
     background-color: rgb(249, 242, 217);
     border-color: rgb(247, 216, 106);
     opacity: 1;
