--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -10,6 +10,23 @@ $tabHeight: 26;
     top: 0;
     bottom: 0;
     right: 0;
+    overflow: hidden;
+}
+
+.dock-manager {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    overflow: hidden;
+    background-color: #f5f5f5;
+    border-top: $borderColor 1px solid;
+}
+
+.dock-manager .spitter-drag-bar.vertical {
+    border-left: $borderColor 1px solid;
+    border-right: $borderColor 1px solid;
 }
 
 .cm-tabstrip {
@@ -27,7 +44,6 @@ $tabHeight: 26;
     line-height: #{$tabHeight}px;
     padding: 0 10px;
     padding-top: 2px;
-    border-top: $borderColor 1px solid;
 }
 
 .cm-tabstrip:before {
@@ -117,7 +133,7 @@ $tabHeight: 26;
     display: block;
 }
 
-.cm-tabstrip li.active {
+.focused .cm-tabstrip li.active {
     color: WindowText;
     height: #{$tabHeight}px;
     background-color: window;
@@ -128,6 +144,15 @@ $tabHeight: 26;
     opacity: 1;
 }
 
+.cm-tabstrip li.active {
+    height: #{$tabHeight}px;
+    z-index: 2;
+    padding-right: 0px;
+    padding-top: 4px;
+    opacity: 1;
+}
+
+.drop,
 .cm-tabstrip li.drop,
 .cm-tabstrip li.new.drop,
 .cm-tabstrip li.active.drop,
@@ -166,7 +191,7 @@ $tabHeight: 26;
     position: absolute;
     background-size: 16px 16px;
     background-position: center;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
     pointer-events: none;
 }
 
@@ -177,9 +202,9 @@ $tabHeight: 26;
     background-size: 16px 16px;
     display: inline-block;
     position: relative;
-    top: 2px;   
+    top: 2px;
     background-position: center;
-    background-repeat: no-repeat;      
+    background-repeat: no-repeat;
 }
 
 .cm-tabstrip li .close {
