--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -92,6 +92,24 @@ body {
     color: #6d8086 !important;
 }
 
+.datagrid.focused .datagrid-row:hover .icon-o,
+.datagrid.focused .datagrid-row:hover .icon-h,
+.datagrid.focused .datagrid-row:hover .icon-c,
+.datagrid.focused .datagrid-row.selected .icon-o,
+.datagrid.focused .datagrid-row.selected .icon-h,
+.datagrid.focused .datagrid-row.selected .icon-c {
+    color: white !important;
+}
+
+.datagrid-row:hover .icon-o,
+.datagrid-row:hover .icon-h,
+.datagrid-row:hover .icon-c,
+.datagrid-row.selected .icon-o,
+.datagrid-row.selected .icon-h,
+.datagrid-row.selected .icon-c {
+    color: black !important;
+}
+
 .icon-o {
     color: #8dc149 !important;
 }
@@ -122,7 +140,7 @@ body {
 }
 
 .output {
-    bottom: 0;
+    bottom: 20px;
     left: 0;
     right: 0;
     position: absolute;
@@ -444,6 +462,7 @@ dialog .close {
     top: 0;
     bottom: 0;
     z-index: 1;
+    display: none;
 }
 
 /*
@@ -870,4 +889,90 @@ input[type=checkbox].property-grid-editor {
     padding-left: 2px;
     padding-right: 2px;
     width: 100%;
+}
+
+.panel-heading .control-label {
+    width: 100%;
+    margin: 0px;
+    margin-top: 3px;
+    margin-left: 5px;
+}
+
+.panel-heading {
+    padding: 2px;
+}
+
+.panel-heading .form-control {
+    display: inline-block;
+    margin: 0px;
+}
+
+.panel-heading {
+    min-height: 60px;
+}
+
+.path-container {
+    display: inline-block;
+    position: absolute;
+    top: 32px;
+}
+
+.path-container input {
+    padding: 2px;
+    height: auto;
+}
+
+.path-container {
+    left: 4px;
+    right: 4px;
+}
+
+.path-container .input-group {
+    width: 100%;
+    height: 26px;
+}
+
+.path-container .input-group button {
+    height: 26px;
+    padding-top: 2px;
+}
+
+#remoteBrowse .dialog-footer .bootstrap-select {
+    margin: 0;
+    padding: 0;
+    height: 29px;
+}
+
+.dropdown-menu a.active2 {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9eceff+0,3399ff+100 */
+    background: #3399ff;
+
+    /* Old browsers */
+    background: -moz-linear-gradient(top, #9eceff 0%, #3399ff 100%);
+
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #9eceff 0%, #3399ff 100%);
+
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #9eceff 0%, #3399ff 100%);
+
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9eceff', endColorstr='#3399ff',GradientType=0 );
+
+    /* IE6-9 */
+    color: white;
+}
+
+.dropdown-menu > li > a:focus, .dropdown-menu > li > a.active {
+    background-color: #e8e8e8;
+    background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
+    background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
+    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+    background-repeat: repeat-x;
+}
+
+#remote-navigate {
+    overflow: auto;
 }
