--- a/src/css/datagrid.scss
+++ b/src/css/datagrid.scss
@@ -491,3 +491,8 @@ button.datagrid-footer-btn .glyphicon.datagrid-footer-btn-icon {
     border-bottom: 1px solid rgba(221, 221, 221, 1);
     border-top: 1px solid rgba(221, 221, 221, 1);
 }
+
+.datagrid ::-webkit-scrollbar-corner {
+    background: #ccc;
+    pointer-events: none;
+}
