Fix typos and eslint issues

--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -718,7 +718,7 @@ body {
     left: 3px;
 }
 
-#lagmeter.progressbar .progressbar-text {
+#lagMeter.progressbar .progressbar-text {
     left: 0;
 }
 
