--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -703,7 +703,7 @@ body {
     left: 3px;
 }
 
-#lagmeter.progressbar .progressbar-text {
+#lagMeter.progressbar .progressbar-text {
     left: 0;
 }
 
