--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -708,7 +708,7 @@ body {
     left: 3px;
 }
 
-#lagmeter.progressbar .progressbar-text {
+#lagMeter.progressbar .progressbar-text {
     left: 0;
 }
 
