--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -729,7 +729,7 @@ body {
     left: 3px;
 }
 
-#lagmeter.progressbar .progressbar-text {
+#lagMeter.progressbar .progressbar-text {
     left: 0;
 }
 
