--- a/src/css/datagrid.scss
+++ b/src/css/datagrid.scss
@@ -465,17 +465,23 @@ button.datagrid-footer-btn .glyphicon.datagrid-footer-btn-icon {
 }
 
 .datagrid-collapse.fa-chevron-down {
-    float: left;
-    margin-left: -18px;
-    margin-top: 1px;
-    width: auto;
+    position: absolute;
+    left: 0;
+    top: -3px;
+    width: 18px;
+    text-align: center;
+    padding-top: 5px;
+    bottom: 0;
 }
 
 .datagrid-collapse.fa-chevron-right {
-    float: left;
-    margin-left: -15px;
-    margin-top: 3px;
-    width: auto;
+    position: absolute;
+    left: 0;
+    top: -3px;
+    width: 18px;
+    text-align: center;
+    padding-top: 6px;
+    bottom: 0;
 }
 
 .datagrid-column-tree {
