Code editor: add open remote system

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -237,7 +237,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     text-align: left;
-    direction: rtl;
+    /*direction: rtl;*/
 }
 
 .ace_status-indicator {
