--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1009,6 +1009,7 @@ input[type=checkbox].property-grid-editor {
 
 .wizard-page .control-label {
     width: 100%;
+    margin-bottom: 0;
 }
 
 .wizard-body {
