--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -154,7 +154,7 @@ body {
     border-left:1px solid #{$borderColor};
 }
 
-#find {
+#display-find {
     top: 5px;
     right: 20px;
     padding: 2px;
@@ -167,8 +167,8 @@ body {
     text-shadow: 0 1px 0 #fff;
 }
 
-#find input,
-#find input:focus {
+#display-find input,
+#display-find input:focus {
     border: 1px solid #{$borderColor};
     width: 100px;
     background-color: white;
@@ -179,16 +179,16 @@ body {
     border-radius: 2px;
 }
 
-#find input:focus {
+#display-find input:focus {
     border: 1px solid adadad;
     color: #{$color};
 }
 
-#find button .fa {
+#display-find button .fa {
     margin-top: 3px;
 }
 
-#find button {
+#display-find button {
     width: 22px;
     height: 22px;
     border: 1px solid transparent;
@@ -204,8 +204,8 @@ body {
     border-radius: 2px;
 }
 
-#find button:hover,
-#find button.active:hover {
+#display-find button:hover,
+#display-find button.active:hover {
     color: #{$color};
     background-color: #e0e0e0;
     background-position: 0 -15px;
@@ -214,7 +214,7 @@ body {
     text-shadow: 0 1px 0 #fff;
 }
 
-#find button.active:hover {
+#display-find button.active:hover {
     color: #{$color};
     background-color: #a0a0a0;
     background-position: 0 -15px;
@@ -223,12 +223,12 @@ body {
     text-shadow: 0 1px 0 #333;
 }
 
-#find button:active {
+#display-find button:active {
     border: 1px solid #0052A4;
 }
 
-#find button:disabled,
-#find button:disabled:hover {
+#display-find button:disabled,
+#display-find button:disabled:hover {
     background-color: inherit !important;
     background-image: none;
     box-shadow: none;
@@ -237,18 +237,18 @@ body {
     color: #666;
 }
 
-#find button.active {
+#display-find button.active {
     background-color: #666;
     border-color: #ccc;
     text-shadow: 0 1px 0 #{$color};
     color: #fff;
 }
 
-#find-case {
+#display-find-case {
     font-size: 10px;
 }
 
-#find-word {
+#display-find-word {
     text-decoration: overline underline;
     font-size: 10px;
 }
