--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -209,42 +209,42 @@ body {
     position: absolute;
 }
 
-#display-find {
+.find {
     position: absolute;
     display: none;
     z-index: 100;
 }
 
-#display-find input,
-#display-findlay-find input:focus {
+.find input,
+.findlay-find input:focus {
     outline: none;
     position: relative;
 }
 
-#display-find button {
+.find button {
     display: inline-block;
     outline: none;
 }
 
-#display-find button:disabled,
-#display-find button:disabled:hover {
+.find button:disabled,
+.find button:disabled:hover {
     cursor: not-allowed;
 }
 
-#display-find button:hover,
-#display-find button.active:hover {
+.find button:hover,
+.find button.active:hover {
     cursor: default;
 }
 
-#display-find button:active {
+.find button:active {
     cursor: default;
 }
 
-#display-find button.active {
+.find button.active {
     cursor: default;
 }
 
-#display-find-count {
+.find-count {
     display: inline-block;
     width: 100px;
     font-family: Arial, Helvetica, sans-serif;
@@ -252,7 +252,7 @@ body {
     text-align: center;
 }
 
-#display-find-selection {
+.find-selection {
     display: none !important;
 }
 
