--- a/src/css/log.viewer.scss
+++ b/src/css/log.viewer.scss
@@ -1,3 +1,9 @@
+$images: "./../../assets";
+$borderColor: "rgb(204, 204, 204)";
+$color: "#333";
+$panelBackground: "rgb(240, 240, 240)";
+$panelInsetBackground: "rgb(240, 240, 240)";
+
 html,
 body {
     overflow: hidden;
@@ -446,6 +452,8 @@ dialog .close {
     text-shadow: none;
     outline: none;
     line-height: inherit;
+    border: 0px;
+    border-radius: 0;
 }
 
 .html-viewer .line, 
@@ -455,49 +463,129 @@ dialog .close {
     position: relative;
 }
 
+.html-viewer .ansi, 
+.text-viewer .ansi,
+.ansi {
+    display: inline;
+}
+
+.line:last-child {
+    margin-right: 5px;
+}
+
 .find {
-    position: absolute;
-    display: none;
-    z-index: 100;
+    top: 5px;
+    right: 20px;
+    padding: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    border-radius: 4px;
+    border: 1px solid #{$borderColor};
+    background-color: #{$panelBackground};
+    color: #{$color};
+    text-shadow: 0 1px 0 #fff;
 }
 
 .find input,
-.findlay-find input:focus {
-    outline: none;
-    position: relative;
+.find input:focus {
+    border: 1px solid #{$borderColor};
+    width: 100px;
+    background-color: white;
+    color: black;
+    padding: 2px 2px;
+    height: 22px;
+    top: -1px;
+    border-radius: 2px;
+}
+
+.find input:focus {
+    border: 1px solid adadad;
+    color: #{$color};
+}
+
+.find button .fa {
+    margin-top: 3px;
 }
 
 .find button {
-    display: inline-block;
-    outline: none;
-}
-
-.find button:disabled,
-.find button:disabled:hover {
-    cursor: not-allowed;
+    width: 22px;
+    height: 22px;
+    border: 1px solid transparent;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    vertical-align: top;
+    line-height: 16px;
+    color: inherit;
+    background-color: inherit;
+    padding: 0px;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 2px;
 }
 
 .find button:hover,
 .find button.active:hover {
-    cursor: default;
+    color: #{$color};
+    background-color: #e0e0e0;
+    background-position: 0 -15px;
+    color: #333;
+    border-color: #adadad;
+    text-shadow: 0 1px 0 #fff;
+}
+
+.find button.active:hover {
+    color: #{$color};
+    background-color: #a0a0a0;
+    background-position: 0 -15px;
+    color: #fff;
+    border-color: #adadad;
+    text-shadow: 0 1px 0 #333;
 }
 
 .find button:active {
-    cursor: default;
+    border: 1px solid #0052A4;
+}
+
+.find button:disabled,
+.find button:disabled:hover {
+    background-color: inherit !important;
+    background-image: none;
+    box-shadow: none;
+    opacity: .25;
+    border: 1px solid transparent;
+    color: #666;
 }
 
 .find button.active {
-    cursor: default;
+    background-color: #666;
+    border-color: #ccc;
+    text-shadow: 0 1px 0 #{$color};
+    color: #fff;
 }
 
 .find-count {
-    display: inline-block;
-    width: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 4px;
-    text-align: center;
+    padding: 0px;
 }
 
-.find-selection {
-    display: none !important;
+.find-case {
+    font-size: 10px;
+}
+
+.find-word {
+    text-decoration: overline underline;
+    font-size: 10px;
+}
+
+.find-highlight {
+    border-radius: 4px;
+    background: rgb(171, 102, 31);
+}
+
+.find-no-results {
+    color: #F08080;
+}
+
+.find-highlight.current {
+    border-radius: 4px;
+    background: rgb(116, 192, 114);
 }
