Log viewer: create html tab page to speed up iframe loading as no longer need to set css

--- a/src/css/log.viewer.scss
+++ b/src/css/log.viewer.scss
@@ -456,6 +456,10 @@ dialog .close {
     border-radius: 0;
 }
 
+pre.viewer {
+    padding: 5px;
+}
+
 .html-viewer .line, 
 .text-viewer .line,
 .line {
