Code editor: Hightlight unused descriptions with a red index

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1021,3 +1021,8 @@ input[type=checkbox].property-grid-editor {
     left: 0;
     right: 0;
 }
+
+.cell-unused-terrain {
+    color:red;
+    font-weight: bold;
+}
